--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="lightGray">#FFEEEEEE</color>
     <color name="okGreen">#05A95C</color>
     <color name="declineRed">#C5312D</color>
+    <color name="starYellow">#FFDE03</color>
 </resources>
